Update Readme, add unit tests

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -5,4 +5,4 @@ RUN pip3 install --no-cache-dir --upgrade -r /code/requirements.txt
 COPY ../.. /code/app
 ENV REGION=eu-west-2
 EXPOSE 8001
-CMD ["uvicorn", "app:app","--host", "0.0.0.0","--port", "8001"]
+CMD ["uvicorn", "app.app:app","--host", "0.0.0.0","--port", "8001"]
